update voacapl to use El Capitan gcc by default update iperf3 regex to exclude author's beta versions in livecheck

--- a/net/iperf3/Portfile
+++ b/net/iperf3/Portfile
@@ -37,7 +37,7 @@ subport ${name}-devel {
 
 if {${name} == ${subport}} {
     livecheck.url       ${master_sites}
-    livecheck.regex     {iperf-(\d+(?:\.\d+)*)}
+    livecheck.regex     {iperf-(\d+(?:\.\d+)*(?!b))}
     livecheck.type      regex
 } else {
     livecheck.type      none
