--- a/python/chirp/Portfile
+++ b/python/chirp/Portfile
@@ -19,7 +19,7 @@ long_description    ${name} is a free, open-source tool for programming your ama
 homepage            http://chirp.danplanet.com/
 
 master_sites        http://chirp.danplanet.com/download/${version}
-distfiles           ${name}-${version}.tar.gz
+distfiles           ${name}-${version}${extract.suffix}
 
 conflicts           ${name}-devel
 
@@ -33,18 +33,18 @@ depends_lib-append  port:py${python.version}-serial \
                     port:py${python.version}-pygtk
 
 subport ${name}-devel {
-    version         20141220
+    version         20150814
 
     master_sites    http://trac.chirp.danplanet.com/chirp_daily/LATEST/
     distname        ${name}-daily-${version}
-    distfiles       ${distname}.tar.gz
+    distfiles       ${distname}${extract.suffix}
 
     conflicts       ${name}
 
-    checksums       rmd160  acee90cf75f569790dcb52c4511dc2f6d061b2a0 \
-                    sha256  0c0bac8bd92989ad4d00b616cca14833c92c0b5b6c7ee4b671000e7cedd10313
+    checksums       rmd160  c8e1b6c0e3a3ac5d6aa1703c10b798cf3efaa245 \
+                    sha256  2a478cccc37b650b8c8dec09b194c1ab326aa79c02388849c6f76f436c641d63
 
-    livecheck.regex "${name}-daily-(\\d+)${extract.suffix}"
+    livecheck.regex "${name}-daily-(\\d+)"
 }
 
 patch {
