updated pythonprop to 0.18 replaced gnome-icon-theme port with gnome-themes-standard

--- a/gnome/gnome-chess/Portfile
+++ b/gnome/gnome-chess/Portfile
@@ -37,7 +37,7 @@ depends_lib         port:gnome-common \
                     port:librsvg
 
 depends_run         port:adwaita-icon-theme \
-                    port:gnome-icon-theme \
+                    port:gnome-themes-standard \
                     port:gnome-icon-theme-symbolic \
                     port:gnuchess
 
