--- a/gnome/gnome-mahjongg/Portfile
+++ b/gnome/gnome-mahjongg/Portfile
@@ -36,8 +36,7 @@ depends_lib         port:gnome-common \
                     port:librsvg
 
 depends_run         port:adwaita-icon-theme \
-                    port:gnome-themes-standard \
-                    port:gnome-icon-theme-symbolic
+                    port:gnome-themes-standard
 
 use_autoconf        yes
 autoconf.cmd        ./autogen.sh
