--- a/comms/odobenix/Portfile
+++ b/comms/odobenix/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 PortGroup           github 1.0
 
-github.setup        fwisard odobenix 1.2.1
+github.setup        fwisard odobenix 1.2.1 v
 
 name                odobenix
 categories          comms python
