--- a/comms/d-rats/Portfile
+++ b/comms/d-rats/Portfile
@@ -3,6 +3,7 @@
 
 PortSystem          1.0
 PortGroup           python 1.0
+PortGroup           app 1.0
 
 name                d-rats
 categories          comms python
@@ -21,6 +22,8 @@ version             0.3.3
 homepage            http://www.d-rats.com/
 
 python.versions     26 27
+app.executable      ${frameworks_dir}/Python.framework/Versions/${python.branch}/bin/${name}
+app.icon            ${portpath}/files/d-rats.icns
 
 set download.dir    [join [lrange [split ${version} .] 0 1] .]
 master_sites        http://d-rats.danplanet.com/download/v${download.dir}.x
