--- a/python/chirp/Portfile
+++ b/python/chirp/Portfile
@@ -33,7 +33,8 @@ app.icon            share/chirp.png
 
 depends_lib-append  port:py${python.version}-serial \
                     port:py${python.version}-libxml2 \
-                    port:py${python.version}-pygtk
+                    port:py${python.version}-pygtk \
+                    port:py${python.version}-gtk-osx-application-gtk2
 
 subport ${name}-devel {
     version         20160703
@@ -61,7 +62,13 @@ patch {
     } else {
         set mainapp ${worksrcpath}/chirp/ui/mainapp.py
     }
-    reinplace "s|/usr/share/pixmaps|${prefix}/share/pixmaps|" \
+    reinplace "s|/usr/share/|${prefix}/share/|g" \
+        ${mainapp}
+
+    # switch to using gtk-osx-application-gtk2
+    reinplace "s|gtk_osxapplication|gtkosx_application|g" \
+        ${mainapp}
+    reinplace "s|.OSXApplication()|.Application()|" \
         ${mainapp}
 }
 
